--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "repository": {
             "type": "git",
             "url": "git://github.com/remobile/react-native-toast.git"
+        },
+        "devDependencies": {
+            "react-native": "^0.19.0"
         }
 }
