--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
         },
         "repository": {
             "type": "git",
-            "url": "git://github.com/remobile/react-native-toast.git"
+            "url": "git://github.com/influencemobile/react-native-toast.git"
         },
+        "files": [
+            "android",
+            "ios",
+            "index.js"
+        ],
         "devDependencies": {
             "react-native": "^0.19.0"
         }
